; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-video.c_ctrl_by_id.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-video.c_ctrl_by_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_queryctrl = type { i32 }

@CTRLS = common dso_local global i32 0, align 4
@video_ctrls = common dso_local global %struct.v4l2_queryctrl* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.v4l2_queryctrl* (i32)* @ctrl_by_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.v4l2_queryctrl* @ctrl_by_id(i32 %0) #0 {
  %2 = alloca %struct.v4l2_queryctrl*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %24, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @CTRLS, align 4
  %8 = icmp ult i32 %6, %7
  br i1 %8, label %9, label %27

9:                                                ; preds = %5
  %10 = load %struct.v4l2_queryctrl*, %struct.v4l2_queryctrl** @video_ctrls, align 8
  %11 = load i32, i32* %4, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds %struct.v4l2_queryctrl, %struct.v4l2_queryctrl* %10, i64 %12
  %14 = getelementptr inbounds %struct.v4l2_queryctrl, %struct.v4l2_queryctrl* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %3, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %9
  %19 = load %struct.v4l2_queryctrl*, %struct.v4l2_queryctrl** @video_ctrls, align 8
  %20 = load i32, i32* %4, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds %struct.v4l2_queryctrl, %struct.v4l2_queryctrl* %19, i64 %21
  store %struct.v4l2_queryctrl* %22, %struct.v4l2_queryctrl** %2, align 8
  br label %28

23:                                               ; preds = %9
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %4, align 4
  %26 = add i32 %25, 1
  store i32 %26, i32* %4, align 4
  br label %5

27:                                               ; preds = %5
  store %struct.v4l2_queryctrl* null, %struct.v4l2_queryctrl** %2, align 8
  br label %28

28:                                               ; preds = %27, %18
  %29 = load %struct.v4l2_queryctrl*, %struct.v4l2_queryctrl** %2, align 8
  ret %struct.v4l2_queryctrl* %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
